--- a/Server/Server.csproj
+++ b/Server/Server.csproj
@@ -12,4 +12,8 @@
     <PackageReference Include="supabase-csharp" Version="0.13.4" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Server\" />
+  </ItemGroup>
+
 </Project>
