--- a/Server/Server.csproj
+++ b/Server/Server.csproj
@@ -10,6 +10,7 @@
   <ItemGroup>
     <PackageReference Include="NAudio" Version="2.1.0" />
     <PackageReference Include="supabase-csharp" Version="0.13.4" />
+    <PackageReference Include="System.Drawing.Common" Version="8.0.2" />
   </ItemGroup>
 
   <ItemGroup>
