--- a/Server/Server.csproj
+++ b/Server/Server.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Magick.NET-Q16-AnyCPU" Version="13.6.0" />
     <PackageReference Include="NAudio" Version="2.1.0" />
     <PackageReference Include="supabase-csharp" Version="0.13.4" />
     <PackageReference Include="System.Drawing.Common" Version="8.0.2" />
